--- a/ircbot.1
+++ b/ircbot.1
@@ -2,7 +2,7 @@
 .SH NAME
 IRCBot \- IRC logging bot
 .SH SYNOPSIS
-.B ircbot.py [-s HOST] [-p PORT] ...
+.B ircbot.py [--server HOST] [--port PORT] ...
 .SH DESCRIPTION
 .B ircbot
 logs an IRC channel. This log can be used to stalk the members :) The bot is able to send the log via email to a given adress, and the logging mechanism is generic by using plugins.
